examples/issues/issue_1858/expected/~g_v1_service_canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  ports:
  - port: 80
  selector:
    app: dummy
